modified gitignore so that generated files aren't included. miniLexer now passes tests 1-6.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 syllabus.pdf
 javacc-5.0
-class_slides/*
+class_slides
+videos
+proj1/tst/test*.lerr
+proj1/tst/test*.tkn
+proj1/lexer/*.java
+proj1/lexer/*.class
