saved the compile errors into a file. added a clean directive for parser0, missing for some reason

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ proj1/lexer/TokenMgrError.java
 proj1/lexer/miniLexer.java
 proj1/lexer/miniLexerConstants.java
 proj1/lexer/miniLexerTokenManager.java
+proj2/parser0/*.java
+test_lexer
